--- a/Naylah.UWP/Naylah.UWP.csproj
+++ b/Naylah.UWP/Naylah.UWP.csproj
@@ -105,6 +105,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="Naylah.UWP.nuspec" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
