--- a/Naylah.Xamarin/Naylah.Xamarin.nuspec
+++ b/Naylah.Xamarin/Naylah.Xamarin.nuspec
@@ -13,7 +13,8 @@
         <language>en-US</language>
         <tags>Naylah, Toolkit, Xamarin, C#, Xaml,</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="2.1.0.6529" />
+          <dependency id="Naylah.Core" version="*" />
+          <dependency id="Xamarin.Forms" version="2.1.0.6529" />
         </dependencies>
     </metadata>
     <files>
