--- a/Naylah.Xamarin/Naylah.Xamarin.nuspec
+++ b/Naylah.Xamarin/Naylah.Xamarin.nuspec
@@ -18,9 +18,14 @@
         </dependencies>
     </metadata>
     <files>
+      
       <!--<file src="bin\Release\Controls\Naylah.Core.dll" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Naylah.Core.dll"/>-->
       <file src="bin\Release\Naylah.Xamarin.dll" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Naylah.Xamarin.dll"/>
+      <file src="bin\Release\Naylah.Xamarin.dll" target="lib\Xamarin.iOS10\Naylah.Xamarin.dll"/>
+      <file src="bin\Release\Naylah.Xamarin.dll" target="llib\MonoAndroid10\Naylah.Xamarin.dll"/>
+      
       <file src="..\Naylah.Xamarin.iOS\bin\Release\Naylah.Xamarin.iOS.dll" target="lib\Xamarin.iOS10\Naylah.Xamarin.iOS.dll" />
       <file src="..\Naylah.Xamarin.Android\bin\Release\Naylah.Xamarin.Android.dll" target="lib\MonoAndroid10\Naylah.Xamarin.Android.dll" />
+      
     </files>
 </package>
