--- a/Naylah.SampleApp/Naylah.SampleApp.Droid/Properties/AndroidManifest.xml
+++ b/Naylah.SampleApp/Naylah.SampleApp.Droid/Properties/AndroidManifest.xml
@@ -1,11 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="naylah.sampleapp" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
-	<application 
-    android:label="Naylah.Sample"
-    android:icon="@drawable/icon" 
-    android:theme="@style/MyTheme"
-    >
-    
-  </application>
+	<application android:label="Naylah.Sample" android:icon="@drawable/icon" android:theme="@style/MyTheme"></application>
 </manifest>
