--- a/Naylah.SampleApp/Naylah.SampleApp.UWP/Naylah.SampleApp.UWP.csproj
+++ b/Naylah.SampleApp/Naylah.SampleApp.UWP/Naylah.SampleApp.UWP.csproj
@@ -128,6 +128,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Naylah.Xamarin\Naylah.Xamarin.csproj">
+      <Project>{de433a04-78fd-4227-b270-b70d887c36f6}</Project>
+      <Name>Naylah.Xamarin</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Naylah.SampleApp\Naylah.SampleApp.csproj">
       <Name>Naylah.SampleApp</Name>
     </ProjectReference>
