--- a/Naylah.Xamarin/Naylah.Xamarin.csproj
+++ b/Naylah.Xamarin/Naylah.Xamarin.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Controls\Pages\PageBase.cs" />
     <Compile Include="Controls\Pickers\BindablePicker.cs" />
     <Compile Include="Controls\Style\BasicTheme.cs" />
+    <Compile Include="Controls\Style\StyleKit.cs" />
     <Compile Include="Converters\InversiveBooleanConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\NavigationService\INavigable.cs" />
