--- a/Naylah.SampleApp/Naylah.SampleApp/packages.config
+++ b/Naylah.SampleApp/Naylah.SampleApp/packages.config
@@ -2,5 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading" version="2.1.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.1.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.2.0.45" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
