--- a/Naylah.SampleApp/Naylah.SampleApp.Droid/packages.config
+++ b/Naylah.SampleApp/Naylah.SampleApp.Droid/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid60" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
+  <package id="Plugin.Permissions" version="1.1.7" targetFramework="monoandroid60" />
+  <package id="Splat" version="1.6.2" targetFramework="monoandroid60" />
+  <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
