--- a/Naylah.SampleApp/Naylah.SampleApp.UWP/project.json
+++ b/Naylah.SampleApp/Naylah.SampleApp.UWP/project.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "MvvmLightLibs": "5.3.0",
+    "PCLStorage": "1.0.2",
+    "Splat": "1.6.2",
     "Xamarin.Forms": "2.3.0.107"
   },
   "frameworks": {
