--- a/Naylah.SampleApp/Naylah.SampleApp.iOS/packages.config
+++ b/Naylah.SampleApp/Naylah.SampleApp.iOS/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.2" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.1.5" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.1.5" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.1.5" targetFramework="xamarinios10" />
