--- a/Naylah.SampleApp/Naylah.SampleApp/packages.config
+++ b/Naylah.SampleApp/Naylah.SampleApp/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.FFImageLoading" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.FFImageLoading.Transformations" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
