--- a/Naylah.Xamarin/packages.config
+++ b/Naylah.Xamarin/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.1.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
