--- a/Naylah.SampleApp/Naylah.SampleApp.iOS/packages.config
+++ b/Naylah.SampleApp/Naylah.SampleApp.iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
+  <package id="FloatLabeledEntry.iOS" version="1.0.1" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
   <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
