--- a/Naylah.Xamarin/Naylah.Xamarin.nuspec
+++ b/Naylah.Xamarin/Naylah.Xamarin.nuspec
@@ -15,6 +15,7 @@
         <dependencies>
           <dependency id="Naylah.Core" />
           <dependency id="Xamarin.Forms" version="2.1.0.6529" />
+          <dependency id="PCLStorage" version="1.0.2" />
         </dependencies>
     </metadata>
     <files>
