--- a/Naylah.SampleApp/Naylah.SampleApp.UWP/project.json
+++ b/Naylah.SampleApp/Naylah.SampleApp.UWP/project.json
@@ -3,7 +3,10 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "MvvmLightLibs": "5.3.0",
     "PCLStorage": "1.0.2",
-    "Splat": "1.6.2",
+    "Xam.Plugin.Media": "2.3.0",
+    "Xamarin.FFImageLoading": "2.1.6",
+    "Xamarin.FFImageLoading.Forms": "2.1.6",
+    "Xamarin.FFImageLoading.Transformations": "2.1.6",
     "Xamarin.Forms": "2.3.0.107"
   },
   "frameworks": {
