--- a/Naylah.Xamarin/Naylah.Xamarin.nuspec
+++ b/Naylah.Xamarin/Naylah.Xamarin.nuspec
@@ -22,6 +22,7 @@
         <dependency id="Xam.Plugin.Media" version="2.3.0" />
         <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
       </group>
+      
       <group targetFramework=".NETPortable0.0-wp8">
         <dependency id="Naylah.Core"/>
         <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
@@ -31,9 +32,22 @@
         <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
       </group>
 
-      <group targetFramework="MonoAndroid1.0" />
-
+      <group targetFramework="MonoAndroid1.0">
+         <dependency id="Naylah.Core"/>
+        <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
+        <dependency id="PCLStorage" version="1.0.2" />
+        <dependency id="Plugin.Permissions" version="1.0.2" />
+        <dependency id="Xam.Plugin.Media" version="2.3.0" />
+        <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
+      </group>
+      
       <group targetFramework="Xamarin iOS1.0">
+        <dependency id="Naylah.Core"/>
+        <dependency id="Xamarin.Forms" version="[2.3.0.107]" />
+        <dependency id="PCLStorage" version="1.0.2" />
+        <dependency id="Plugin.Permissions" version="1.0.2" />
+        <dependency id="Xam.Plugin.Media" version="2.3.0" />
+        <dependency id="Xamarin.FFImageLoading.Forms" version="2.1.6" />
         <dependency id="WebP.Touch" version="1.0.2" />
         <dependency id="FloatLabeledEntry.iOS" version="1.0.1" />
       </group>
