--- a/Naylah.Xamarin/Naylah.Xamarin.csproj
+++ b/Naylah.Xamarin/Naylah.Xamarin.csproj
@@ -45,17 +45,26 @@
     <Compile Include="Common\DispatcherWrapper.cs" />
     <Compile Include="Common\IDispatcherWrapper.cs" />
     <Compile Include="Controls\Choosers\ImageChooser.cs" />
+    <Compile Include="Controls\Customizations\BindableToolbarItem.cs" />
     <Compile Include="Controls\Customizations\ContentLoader.cs" />
     <Compile Include="Controls\Customizations\HeaderedLayout.cs" />
+    <Compile Include="Controls\Customizations\ImageGalleryView.cs" />
+    <Compile Include="Controls\Customizations\PagerIndicatorDots.cs" />
+    <Compile Include="Controls\Customizations\PinchToZoomContainer.cs" />
     <Compile Include="Controls\Entrys\EntryBase.cs" />
     <Compile Include="Controls\Entrys\FloatLabeledEntry.cs" />
+    <Compile Include="Controls\Listviews\InfiniteListView.cs" />
+    <Compile Include="Controls\Pages\ExtendedTabbedPage.cs" />
     <Compile Include="Controls\Pages\MasterDetailNavigationPage.cs" />
     <Compile Include="Controls\Pages\PageBase.cs" />
     <Compile Include="Controls\Pickers\BindablePicker.cs" />
     <Compile Include="Controls\Style\BasicTheme.cs" />
     <Compile Include="Controls\Style\StyleKit.cs" />
     <Compile Include="Converters\InversiveBooleanConverter.cs" />
+    <Compile Include="Extensions\DoubleExtensions.cs" />
     <Compile Include="Extensions\FileExtensions.cs" />
+    <Compile Include="Extensions\LinqExtensions.cs" />
+    <Compile Include="Extensions\ViewExtensions.cs" />
     <Compile Include="Helpers\DownloadHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\NavigationService\INavigable.cs" />
